<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".candidate.Sign_up">

    <ScrollView android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_sign_up_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >



                <TextView android:id="@+id/create_your_account"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="89dp"
                    android:layout_marginTop="128dp"
                    android:layout_width="239.5dp"
                    android:layout_height="39.5dp"
                    android:text="@string/create_your_account_string"
                    />



                <EditText android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:textSize="17sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="188dp"
                    android:layout_width="330.5dp"
                    android:layout_height="59.5dp"
                    android:hint="@string/email_string"
                    />





                <EditText android:id="@+id/password"
                    android:inputType="textPassword"
                    android:textSize="17sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="275dp"
                    android:layout_width="330.5dp"
                    android:layout_height="59.5dp"
                    android:hint="@string/password_string"
                    />



                <EditText android:id="@+id/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="17sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="362dp"
                    android:layout_width="330.5dp"
                    android:layout_height="59.5dp"
                    android:hint="@string/confirm_password_string"
                    />

                <Button
                    android:id="@+id/i__m_looking_for_job"
                    android:layout_width="127dp"
                    android:layout_height="114.5dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="47dp"
                    android:layout_marginTop="444dp"
                    android:backgroundTint="#e0e0e0"
                    android:gravity="center"
                    android:text="@string/i__m_looking_for_job_string"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/i__m_offering_jobs"
                    android:layout_width="127dp"
                    android:layout_height="114.5dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="232dp"
                    android:layout_marginTop="444dp"
                    android:backgroundTint="#e0e0e0"
                    android:gravity="center"
                    android:text="@string/i__m_offering_jobs_string"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/sign_up_ek3"
                    android:layout_width="321dp"
                    android:layout_height="59dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="38dp"
                    android:layout_marginTop="592dp"
                    android:backgroundTint="@color/button_color_blue"
                    android:gravity="center"
                    android:text="@string/sign_up_ek3_string"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <TextView android:id="@+id/__or_sign_up_with_"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="138dp"
                    android:layout_marginTop="690dp"
                    android:layout_width="141.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/__or_sign_up_with__string"
                    />


                <RelativeLayout android:id="@+id/group_1"
                    android:layout_marginTop="735dp"
                    android:layout_marginStart="130dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >



                    <ImageView android:id="@+id/image_1"
                        android:src="@drawable/image_1"
                        android:contentDescription="image_1"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_width="39dp"
                        android:layout_height="36dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/group_2"
                    android:layout_marginTop="731dp"
                    android:layout_marginStart="213dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >



                    <ImageView android:id="@+id/pngegg_1"
                        android:src="@drawable/pngegg_1"
                        android:contentDescription="pngegg_1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="49dp"
                        android:layout_height="49dp" />

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

</HorizontalScrollView>