<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".candidate.Sign_in">

    <ScrollView android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_sign_in_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >



                <TextView android:id="@+id/login_to_your_account"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="221dp"
                    android:layout_width="252.5dp"
                    android:layout_height="39.5dp"
                    android:text="@string/login_to_your_account_string"
                    />



                <EditText
                    android:id="@+id/email"
                    android:layout_width="330.5dp"
                    android:layout_height="59.5dp"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="281dp"
                    android:hint="@string/email_string"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="330.5dp"
                    android:layout_height="59.5dp"
                    android:layout_marginLeft="41dp"
                    android:layout_marginTop="364dp"
                    android:hint="@string/password_string"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/sign_in_ek3"
                    android:layout_width="321dp"
                    android:layout_height="58.5dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="38dp"
                    android:layout_marginTop="447dp"
                    android:backgroundTint="@color/button_color_blue"
                    android:gravity="center"
                    android:text="@string/sign_in_ek3_string"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />

                <TextView android:id="@+id/__or_sign_in_with_"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="138dp"
                    android:layout_marginTop="604dp"
                    android:layout_width="136.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/__or_sign_in_with__string"
                    />

                <TextView android:id="@+id/don_t_have_an_account__sign_up"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="707dp"
                    android:layout_width="245.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/don_t_have_an_account__sign_up_string"
                    />


                <RelativeLayout android:id="@+id/group_1"
                    android:layout_marginTop="649dp"
                    android:layout_marginStart="130dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >



                    <ImageView android:id="@+id/image_1"
                        android:src="@drawable/image_1"
                        android:contentDescription="image_1"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="3dp"
                        android:layout_width="39dp"
                        android:layout_height="36dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/group_2"
                    android:layout_marginTop="645dp"
                    android:layout_marginStart="213dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >



                    <ImageView android:id="@+id/pngegg_1"
                        android:src="@drawable/pngegg_1"
                        android:contentDescription="pngegg_1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="49dp"
                        android:layout_height="49dp" />

                </RelativeLayout>

                <ImageView android:id="@+id/logo_type_1_2"
                    android:src="@drawable/logo_type_1_1"
                    android:contentDescription="logo_type_1_2"
                    android:layout_marginStart="97dp"
                    android:layout_marginTop="35dp"
                    android:layout_width="196dp"
                    android:layout_height="196dp" />



            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

</HorizontalScrollView>