<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".company.Profile_candidate">

    <ScrollView android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout android:id="@+id/page_profile_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/image_33"
                    android:src="@drawable/image_33"
                    android:contentDescription="image_33"
                    android:layout_marginStart="147dp"
                    android:layout_marginTop="127dp"
                    android:layout_width="97dp"
                    android:layout_height="102dp" />

                <TextView
                    android:id="@+id/udeshani_name_and_email"
                    android:layout_width="201dp"
                    android:layout_height="62dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginLeft="98dp"
                    android:layout_marginTop="245dp"
                    android:gravity="center"
                    android:text="@string/udeshani_name_and_email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <RelativeLayout android:id="@+id/group_4"
                    android:layout_marginTop="305dp"
                    android:layout_marginStart="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View
                        android:id="@+id/rectangle_1_ek1"
                        android:layout_width="340dp"
                        android:layout_height="146dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/rectangle_1_ek1_shape"
                        android:backgroundTint="#E1DFDF" />

                    <TextView
                        android:id="@+id/previous_experience_working_on_software_development_projects__either_through_internships_or_personal_projects"
                        android:layout_width="321.5dp"
                        android:layout_height="82.5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="59dp"
                        android:text="@string/experiences_udeshani"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView android:id="@+id/experiences"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="152.5dp"
                        android:layout_height="39.5dp"
                        android:text="@string/experiences_string"
                        />




                </RelativeLayout>


                <RelativeLayout android:id="@+id/group_5"
                    android:layout_marginTop="470dp"
                    android:layout_marginStart="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/rectangle_1_ek2"
                        android:background="@drawable/rectangle_1_ek2_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="340dp"
                        android:layout_height="146dp"
                        android:backgroundTint="#E1DFDF"/>

                    <TextView
                        android:id="@+id/proficient_in_programming_languages_such_as_java__python__or_c___knowledge_of_front_end_development_technologies"
                        android:layout_width="321.5dp"
                        android:layout_height="82.5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="59dp"
                        android:text="@string/skills_udeshani"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView android:id="@+id/skills"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="80.5dp"
                        android:layout_height="39.5dp"
                        android:text="@string/skills_string"
                        />




                </RelativeLayout>

                <RelativeLayout android:id="@+id/group_6"
                    android:layout_marginTop="633dp"
                    android:layout_marginStart="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/rectangle_1"
                        android:background="@drawable/rectangle_1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="340dp"
                        android:layout_height="146dp"
                        android:backgroundTint="#E1DFDF" />

                    <TextView
                        android:id="@+id/bachelor_s_degree_in_computer_science_"
                        android:layout_width="321.5dp"
                        android:layout_height="28.5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="59dp"
                        android:text="@string/education_udeshani"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView android:id="@+id/education"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/text_color"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="128.5dp"
                        android:layout_height="39.5dp"
                        android:text="@string/education_string"
                        />




                </RelativeLayout>


                <View
                    android:id="@+id/rectangle_7"
                    android:layout_width="410dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/rectangle_7_shape"
                    android:backgroundTint="@color/top_box" />

                <TextView android:id="@+id/good_morning__isuru"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="28dp"
                    android:layout_width="233.5dp"
                    android:layout_height="39.5dp"
                    android:text="@string/Udeshani_S"
                    />
                <TextView android:id="@+id/lbs_company__pvt__ltd"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="34dp"
                    android:layout_marginTop="55dp"
                    android:layout_width="321.5dp"
                    android:layout_height="28.5dp"
                    android:text="@string/Network_Engineer"
                    />

                <Button
                    android:id="@+id/hire"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/button_color_blue"
                    android:text="@string/hire"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/rectangle_9"
                    android:layout_width="410dp"
                    android:layout_height="81dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="720dp"
                    android:background="@drawable/rectangle_9_shape"
                    android:backgroundTint="@color/top_box" />


                <View
                    android:id="@+id/rectangle_10"
                    android:layout_width="59dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="735dp"
                    android:background="@drawable/rectangle_10_shape"
                    android:backgroundTint="@color/button_color_blue"
                    android:contextClickable="true" />


                <RelativeLayout
                    android:id="@+id/home"
                    class=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="51dp"
                    android:layout_marginTop="740dp">

                    <ImageView
                        android:id="@+id/vector_ek3"
                        android:layout_width="29.17dp"
                        android:layout_height="29.17dp"
                        android:layout_marginStart="2.92dp"
                        android:layout_marginTop="2.92dp"
                        android:contentDescription="vector_ek3"
                        android:src="@drawable/vector_ek3" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/document"
                    class=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="740dp">

                    <ImageView
                        android:id="@+id/vector"
                        android:layout_width="26.25dp"
                        android:layout_height="29.17dp"
                        android:layout_marginStart="4.38dp"
                        android:layout_marginTop="2.92dp"
                        android:contentDescription="vector"
                        android:src="@drawable/vector" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/user"
                    class=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="342dp"
                    android:layout_marginTop="740dp">

                    <ImageView
                        android:id="@+id/vector_ek2"
                        android:layout_width="25.33dp"
                        android:layout_height="23.75dp"
                        android:layout_marginStart="6.33dp"
                        android:layout_marginTop="11.08dp"
                        android:contentDescription="vector_ek2"
                        android:src="@drawable/vector_ek2" />

                </RelativeLayout>



            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

</HorizontalScrollView>